# Lib-API-PeopleAdress

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
src/people_address_api_models/: __init__.py  dto.py
src/peopleadress-lib/: __init__.py  models.py
