[project]
name = "peopleadress-lib"
version = "0.1.0"
description = "Modelos SQLModel e DTOs reutilizáveis para APIs FastAPI."
authors = [
    { name = "Heitor Oliveira", email = "oliheitor189@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "sqlmodel>=0.0.24",
    "pydantic>=2.11.19",
]

[project.urls]
homepage = "https://github.com/seurepositorio"
repository = "https://github.com/seurepositorio"
