[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "people_address_api_models"                     # nome do pacote (sem '-') -> IMPORTANTE
version = "0.1.1"
description = "Modelos SQLModel e DTOs reutilizáveis para APIs FastAPI."
authors = [
    { name = "Heitor Oliveira", email = "oliheitor189@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "sqlmodel>=0.0.24",
    "pydantic>=2.11.19",
]

[project.urls]
homepage = "https://github.com/heitoliv/Lib-API-PeopleAdress.git"
repository = "https://github.com/heitoliv/Lib-API-PeopleAdress.git"

